- refactor `CityService` - move logic querydsl from controller to service - delete not necessary method in mapper - rewrite tests